# marian

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CMakeSettingsCI.json  CONTRIBUTING.md  Doxyfile  Doxyfile.in  Jenkinsfile  LICENSE  LICENSE.md  README  README.md  VERSION  _CMakeSettingsCI_CPU.json  _CMakeSettingsCI_GPU.json  azure-pipelines.yml  azure-regression-tests.yml  cmake_doze.txt
src/: CMakeLists.txt  a.out  batch_generator.h  chainable.h  clippers.h  compile_time_crc32.h  corpus.h  cudnn.cu  cudnn_tensor.h  dataset.h  definitions.h  dropout.cu  dropout.h  dropout_benchmark.cu  exception.cpp  exception.h  expression_graph.cu  expression_graph.h  expression_operators.cu  expression_operators.h  expressions.cu  expressions.h  graph.h  graph_operators.h  gru_test.cu  keywords.h  mad.h  marian.h  mnist.h  mnist_benchmark.cu  nematus.cu  nematus.h  nematus_test.cu  node.cu  node.h  node_operators.cu  node_operators.h  node_operators_binary.cu  node_operators_binary.h  node_operators_unary.cu  (+31 more)
src/amun/: CMakeLists.txt
src/apps/: mnist_benchmark.cu  nematus.cu  nematus_test.cu  softmax_benchmark.cu  tensor_test.cu  test_nodes.cu  xor.cu
src/backend/: dispatch.h
src/bpe/: CMakeLists.txt  bpe.h  bpe_main.cpp
src/command/: config.cpp  config.h  marian-main.cpp  marian.cpp  marian.cu  marian_conv.cpp  marian_decoder.cpp  marian_embedder.cpp  marian_main.cpp  marian_mmap.cpp  marian_scorer.cpp  marian_server.cpp  marian_train.cpp  marian_vocab.cpp  multimarian.cu  s2s_rescorer.cpp  s2s_rescorer.cu  s2s_server.cpp  s2s_translator.cpp  s2s_translator.cu  training.h
src/common/: aliases.cpp  any_type.h  authors.h  base_best_hyps.h  base_matrix.cpp  base_matrix.h  binary.cpp  binary.h  bpe.h  build_info.cpp.in  build_info.h  cli_helper.cpp  cli_helper.h  cli_wrapper.cpp  cli_wrapper.h  compile_time_crc32.h  config.cpp  config.h  config_parser.cpp  config_parser.h  config_validator.cpp  config_validator.h  decoder_main.cpp  definitions.h  exception.cpp  exception.h  fastopt.cpp  fastopt.h  file_stream.cpp  file_stream.h  file_stream.h.bac  file_utils.cpp  file_utils.h  filesystem.cpp  filesystem.h  filter.cpp  filter.h  git_version.cpp.in  god.cpp  god.h  (+54 more)
src/cpu/: npz_converter.h
src/data/: alignment.cpp  alignment.h  base_vocab.h  batch.h  batch_generator.h  batch_stats.h  corpus.cpp  corpus.h  corpus_base.cpp  corpus_base.h  corpus_nbest.cpp  corpus_nbest.h  corpus_sqlite.cpp  corpus_sqlite.h  dataset.h  default_vocab.cpp  default_vocab.h  factored_vocab.cpp  factored_vocab.h  filter.h  iterator_facade.h  npz_converter.cpp  npz_converter.h  processor.h  rng_engine.h  sentencepiece_vocab.cpp  sentencepiece_vocab.h  shortlist.cpp  shortlist.h  text_input.cpp  text_input.h  trainer.h  types.h  vocab.cpp  vocab.h  vocab_base.h  vocab_impl.h
src/decoder/: ape_penalty.cu  ape_penalty.h  class_language_model.h  config.cpp  config.h  decoder_main.cpp  decoder_main.cu  encoder_decoder.cpp  encoder_decoder.cu  encoder_decoder.h  god.cpp  god.cu  god.h  history.cpp  history.h  hypothesis.cpp  hypothesis.h  kenlm.cpp  kenlm.h  language_model.h  loader.cpp  loader.h  loader_factory.cu  loader_factory.h  multi_encoder.h  printer.h  scorer.cpp  scorer.h  search.cpp  search.cu  search.h  sentence.cpp  sentence.cu  sentence.h
src/dl4mt/: decoder.h  encoder.cpp  encoder.h  gru.cpp  gru.cu  gru.h  model.cpp  model.cu  model.h
src/embedder/: embedder.h  vector_collector.cpp  vector_collector.h
src/encoder_decoder/: encoder_decoder.cpp  encoder_decoder.h  encoder_decoder_loader.h  encoder_decoder_state.h
src/examples/: CMakeLists.txt  README.md
src/fpga/: array.h  best_hyps.cpp  best_hyps.h  debug-devices.cpp  debug-devices.h  encoder.cpp  encoder.h  encoder_decoder.cpp  encoder_decoder.h  encoder_decoder_loader.cpp  encoder_decoder_loader.h  gru.h  hello_world.cpp  hello_world.h  hello_world2.cpp  kernel.cpp  kernel.h  matrix.cpp  matrix.h  matrix_functions.cpp  matrix_functions.h  model.cpp  model.h  npz_converter.cpp  npz_converter.h  types-fpga.h  types.h
src/functional/: approx.h  array.h  defs.h  floats.h  functional.h  operands.h  operators.h  predicates.h  shape.h  tensor.h  tmp.h
src/gpu/: array.h  defs.h  functions.h  npz_converter.cu  npz_converter.h  nth_benchmark.cu  nth_element.h  placeholders.h  shape.h  tensor.h  tmp.h  types-gpu.cu  types-gpu.h
src/graph/: auto_tuner.h  backend.h  backend_gpu.h  chainable.h  expression_graph.cpp  expression_graph.cu  expression_graph.h  expression_graph_packable.h  expression_operators.cpp  expression_operators.cu  expression_operators.h  node.cpp  node.cu  node.h  node_initializers.cpp  node_initializers.cu  node_initializers.h  node_operators.cpp  node_operators.cu  node_operators.h  node_operators_binary.h  node_operators_tuple.h  node_operators_unary.h  parameters.h
src/kernels/: cuda_helpers.h  cudnn_wrappers.cu  cudnn_wrappers.h  dropout.cu  dropout.h  dropout_cudnn.cu  dropout_cudnn.h  shape_gpu.h  sparse.cu  sparse.h  tensor_operators.cu  tensor_operators.h  thrust_functions.h
src/layers/: attention.cu  attention.h  cells.cu  cells.h  constructors.h  convolution.cpp  convolution.cu  convolution.h  dropout.h  embedding.cpp  embedding.h  embedding_reader.h  factory.h  generic.cpp  generic.h  guided_alignment.cpp  guided_alignment.h  highway.h  logits.cpp  logits.h  loss.cpp  loss.h  lsh.cpp  lsh.h  lsh_impl.h  output.cpp  output.h  param_initializers.cpp  param_initializers.cu  param_initializers.h  rnn.cu  rnn.h  weight.cpp  weight.h  word2vec_reader.h
src/mblas/: base_matrix.h  matrix.cpp  matrix.cu  matrix.h  phoenix_functions.cpp  phoenix_functions.h  simd_math_prims.h  thrust_functions.h
src/microsoft/: CMakeLists.txt  cosmos.cpp  cosmos.h  quicksand.cpp  quicksand.h  sentencepiece.cpp  sentencepiece.h  unicode_conversions.h
src/models/: amun.h  attention.cu  attention.h  bert.h  charS2S.h  char_s2s.h  classifier.h  constructors.h  costs.cpp  costs.h  decoder.h  dl4mt.h  encdec.cpp  encdec.h  encoder.h  encoder_classifier.h  encoder_decoder.cpp  (+28 more)
(+1166 files in other folders)
